k8s/03-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sitako-app
  namespace: sitako
  labels:
    app: sitako-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitako-app
  template:
    metadata:
      labels:
        app: sitako-app
    spec:
      containers:
        - name: backend
          image: sitako-server:latest
          imagePullPolicy: IfNotPresent # Cocok untuk image lokal yang di-load ke k3s via 'k3s ctr images import'
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: sitako
  labels:
    app: sitako-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: sitako-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitako-server-ingress
  namespace: sitako
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web # Bawaan K3s (Traefik)
    # nginx.ingress.kubernetes.io/ssl-redirect: "false" # Khusus Minikube (Nginx Ingress)
spec:
  ingressClassName: traefik # Traefik adalah default ingress controller di K3s
  # ingressClassName: nginx # Nginx adalah default ingress controller di Minikube
  rules:
    - http:
        paths:
          - path: /api
            # - path: / # Khusus jika ingin root path diakses langsung via Ingress Minikube
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8080
